--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-js-app",
+  "name": "corey-stidston-blog",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,7 +14,7 @@
     "@next/mdx": "^15.1.7",
     "gray-matter": "^4.0.3",
     "mermaid": "^11.4.1",
-    "next": "15.1.7",
+    "next": "^15.3.3",
     "next-mdx-remote": "^5.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
